--- a/package.json
+++ b/package.json
@@ -24,13 +24,12 @@
     "@angular/http": "~2.2.1",
     "@angular/platform-browser": "~2.2.1",
     "@angular/platform-browser-dynamic": "~2.2.1",
-    "@angular/router": "~3.4.0",
-
-    "angular-in-memory-web-api": "~0.2.4",
+    "@angular/router": "~3.2.1",
+    "angular-in-memory-web-api": "~0.2.1",
     "systemjs": "0.19.40",
     "core-js": "^2.4.1",
-    "rxjs": "5.0.1",
-    "zone.js": "^0.7.4"
+    "rxjs": "5.0.0-beta.12",
+    "zone.js": "0.6.26"
   },
   "devDependencies": {
     "concurrently": "^3.1.0",
